--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.3.0",
-    "jspdf": "^2.5.1",
+    "jspdf": ">=3.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
